# macrolens

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  main.py  pyproject.toml
agent/: critic.py  executor.py  memory.py  per_loop.py  planner.py  report_writer.py  synthesizer.py
agent/tools/: code_executor.py
api/: tasks.py
cloud_server/: requirements.txt  server.py
data/: events.json
docs/: build_docs.py  failure_analysis.md  interview_talking_points.md  project_flow.md  roadmap.md  system_flow.md
docs/en/: failure_analysis.md  interview_talking_points.md  project_flow.md  roadmap.md  system_flow.md
eval/: chunk_ablation.csv  chunk_ablation.py  compare_versions.py  eval_retrieval.py  metrics.py  questions.py  results_check.csv  results_debug.csv  results_debug2.csv  results_debug3.csv  results_final.csv  results_v1.csv  results_v2.csv  results_v3.csv  results_v4.csv  results_v5.csv  results_v6.csv  results_v7.csv  results_v8.csv  results_v9_pro.csv  run_eval.py
ingestion/: chunkers.py  ingest_events.py  ingest_events_guardian.py  ingest_fred.py  ingest_prices.py  ingest_sec.py  ingest_sec_multi.py
migrations/: 001_init.sql  002_tasks_memory.sql  003_price_earnings.sql  004_multi_ticker_index.sql  005_refresh_log.sql
models/: __init__.py  base.py  config.py  factory.py
models/embedding/: local_bge.py  local_qwen.py  online.py  remote.py
tests/: smoke_test.py  test_data_refresh.py  test_new_components.py  test_price_earnings.py  test_sec_multi.py  test_valuation.py
ui/: app.py
worker/: data_refresh_worker.py  task_worker.py
(+6 files in other folders)
